* change at Clare Tseng's request

--- a/_i18n/en/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
+++ b/_i18n/en/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
@@ -15,7 +15,7 @@
 
 🇳🇿 The presentation was also attended by representatives from the New Zealand Commercial and Industrial Office. The mentors and senior diplomats were extravagant in their praises of the achievement of the Water Box team.
 
-🌾 Members of the Water Box team come from the National Taipei University of Science and Technology, the Textile Industry Research Institute, Chen Yang Environmental Technologist Office, Pegatrono Corporation, Germany's Ge-Komm Corporation and Taiwan's ECOCEO Open Community. They have extrapolated the concept and practice of the internationally renowned successful citizen technology program "Air Box" to create a reasonably cost and widely deployable Water Box. In the future, the Water Box will automatically collect data such as water quality, water volume and the changing cycle of the hydrological environment. Hopefully, this device will strengthen the prediction, prevention and management of different pollution sources and reduce the negative impact on agricultural water use.
+🌾 Members of the Water Box team come from the National Taipei University of Science and Technology, Teng-Mao Tech Corporation, Chen Yang Environmental Technologist Office, Pegatrono Corporation, Germany's Ge-Komm Corporation and Taiwan's ECOCEO Open Community. They have extrapolated the concept and practice of the internationally renowned successful citizen technology program "Air Box" to create a reasonably cost and widely deployable Water Box. In the future, the Water Box will automatically collect data such as water quality, water volume and the changing cycle of the hydrological environment. Hopefully, this device will strengthen the prediction, prevention and management of different pollution sources and reduce the negative impact on agricultural water use.
 
 💯 Furthermore, there is another important water-related innovation in Taiwan: ["Mountain River Event Book"](https://riverlog.lass-net.org), the recent winner of NTD 1 million prize from the Civil IoT Data Application Competition.
 
