--- a/_i18n/zh-TW/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
+++ b/_i18n/zh-TW/_posts/2019-12-30-這支臺灣隊伍-連紐西蘭都說讚.md
@@ -13,7 +13,7 @@ tags:
 
 🇳🇿 在場，還有紐西蘭商工辦事處的代表。無論是兩位經驗豐富的顧問，還是紐國的資深外交官，對於「國土智慧巡守隊」展現出的成果，都給予極高評價。
 
-🌾 「國土智慧巡守隊」的成員，來自國立臺北科技大學、紡織產業綜合研究所、宸暘環境技師事務所、和碩聯合科技公司、德國 Ge-Komm 公司與臺灣 ECOCEO 開放社群。他們延續國際知名的公民科技成功案例「空氣盒子」的概念與作法，打造出成本合理，而且可以廣泛部署的「水盒子」。未來，透過「水盒子」自動搜集水質、水量與水文環境的變化週期等數據，希望加強針對各種污染源的預測、防範與管控，進而降低對農業用水的負面影響。
+🌾 「國土智慧巡守隊」的成員，來自國立臺北科技大學、騰茂科技有限公司、宸暘環境技師事務所、和碩聯合科技公司、德國 Ge-Komm 公司與臺灣 ECOCEO 開放社群。他們延續國際知名的公民科技成功案例「空氣盒子」的概念與作法，打造出成本合理，而且可以廣泛部署的「水盒子」。未來，透過「水盒子」自動搜集水質、水量與水文環境的變化週期等數據，希望加強針對各種污染源的預測、防範與管控，進而降低對農業用水的負面影響。
 
 💯 無獨有偶，近期國內還有另一個與水有關的重要創新，那就是「[山河事件簿](https://riverlog.lass-net.org/)」獲得「第二屆民生公共物聯網資料應用競賽」的百萬獎金。
 
