--- a/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
+++ b/_i18n/en/_posts/2019-12-27-公民之國，在花之中.md
@@ -9,7 +9,7 @@
     - "Social Innovation"
 ---
 
-### Book Review: «Striking Back at the Impending Doom»
+##### Book Review: «[Striking Back at the Impending Doom](https://www.sanmin.com.tw/Product/index/007389883)»
 
 🥭 The catchphrase “sense of impending doom” emerged out of nowhere earlier this year. It quickly set Taiwan’s Internet alight and attracted a nickname: “mango feeling.”
 
