update RAY project posts

--- a/_i18n/en/_posts/2017-09-10-ray2017.md
+++ b/_i18n/en/_posts/2017-09-10-ray2017.md
@@ -14,7 +14,7 @@
 
 ## Preparation
 
-In May of 2018, the online tax filing system was not compatible with the Safari browser, causing complaints from the public. Later, when Mac users operated the annuity trial system, they also encountered obstacles. 
+In May of 2017, the online tax filing system was not compatible with the Safari browser, causing complaints from the public. Later, when Mac users operated the annuity trial system, they also encountered obstacles. 
 
 In addition to providing technical advice to assist in troubleshooting, the PDIS team also consulted with the Dean to discuss solutions to similar problems on government agencies' websites to achieve the goal of equal access across systems, platforms and devices. 
 
@@ -48,8 +48,10 @@ To facilitate remote work, the PDIS team and the trainee use the communication s
 
 ## Reference
 
+- [RAY 2019 official website](https://ray.pdis.nat.gov.tw/){:target="_blank"}
+
+- [RAY 2018 official website](http://ray2018.pdis.tw/){:target="_blank"}
+
+- [RAY 2017 official website](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
+
 - [RAY Project Summary](https://docs.google.com/document/d/1frpcibmwbz0sjofob6diukm6or3slcpfina6pevcjtk/){:target="_blank" }
-
-- [RAY FAQ](http://ray.pdis.tw/#faq){:target="_blank"}
-
-- [See the official website](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
