--- a/_posts/2017-09-10-ray2017.md
+++ b/_posts/2017-09-10-ray2017.md
@@ -46,8 +46,10 @@ PDIS 小組期待，透過此實驗性計畫，導入「使用者體驗」的思
 
 ## 相關文件
 
+- [RAY 2019 官方網站](https://ray.pdis.nat.gov.tw/){:target="_blank"}
+
+- [RAY 2018 官方網站](http://ray2018.pdis.tw/){:target="_blank"}
+
+- [RAY 2017 官方網站](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
+
 - [RAY 計畫概要](https://docs.google.com/document/d/1frpciBMwBz0SjOfoB6DIukM6OR3slcpfINa6PevCJtk/){:target="_blank"}
-
-- [RAY FAQ](http://ray.pdis.tw/#faq){:target="_blank"}
-
-- [詳見官方網站](https://ray2017.pdis.nat.gov.tw/){:target="_blank"}
