--- a/_i18n/en/_posts/2020-01-09-心難過？線上諮商時代來臨.md
+++ b/_i18n/en/_posts/2020-01-09-心難過？線上諮商時代來臨.md
@@ -1,27 +1,26 @@
 ---
   layout: "post"
-  title: "Business week column: sad? The age of online consultation is coming"
-  excerpt: "Starting this year, you can consult without going out."
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/7/7174287ad0e4063fdb6b84ac8882406c3c6805be.jpeg"
-  author: "唐鳳、彭筱婷"
+  title: "The age of online consultation is coming"
+  excerpt: "Starting from this year, it will be possible to consult a therapist without leaving home."
+  image: "https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/f/f4f8761321a5d56c753496f71c4834c0df470018_2_1380x774.jpeg"
+  author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+⚕️ In the past few years, mental health has become an area of interest to the Taiwanese society. Both online community resources and consultation services of professional psychologists have become commonplace.
 
- ⚕️ In recent years, mental health has become an area of public concern. No matter the community resources on the Internet or the consulting services provided by professional psychologists, it has become commonplace. 
+👩‍⚕️ A piece of great news is that starting from this year, it will be possible to consult a therapist without leaving home. In December last year, the Ministry of Health and Welfare published the Practice Principles of Psychological Counseling Provided by Psychologists. Medical institutions, psychotherapy clinics and counseling offices will be able to provide online services when the plans they submit to local authorities have been approved. In other words, as long as an agency is licensed, consultation can be conducted wherever the patient is.
 
- 👩‍⚕️ Thankfully, starting this year, you can consult without going out. In December of last year, the Ministry of Health and Welfare announced the Principles for Psychologists' Implementation of Psychological Counseling for Communication. The plans proposed by medical institutions, psychological treatment clinics, and psychological counseling offices can be implemented after approval by local authorities. In other words, as long as the agency is licensed, consultations can be conducted wherever the case is. 
+🎨 The policy originated in 2017, when the National Development Council first proposed a "Provision of services by doctors and psychologists via online platforms" regulatory amendment on the public vTaiwan platform. It used the platform to solicit comments from different parties, including psychologists, lawyers, and the general public in order to take stock of the regulation and revise its direction.
 
- 🎨 All of this originated in 2017. The National Development Council proactively proposed a regulation adjustment case of "physicians and psychologists providing services through the Internet platform" on the private vTaiwan platform. The platform solicited included psychologists and lawyers. Consult with the public and other parties to take stock of regulations and adjust their directions. 
+🗃️ Based on discussions of the vTaiwan community, the Ministry of Health and Welfare announced the Communication Diagnosis and Treatment Measures in May 2018. It started with broadening the scope of care targets and means of long-distance medical treatment. At the same time, discussions about the laws and regulations concerning psychologists' provision of remote consultation continued to take place on the Innovation Regulations Sandbox Platform of the Ministry of Economic Affairs.
 
- 🗃️ Based on the discussions in the vTaiwan community, in May 2018, the Ministry of Health and Welfare announced the "Communication Diagnosis and Treatment Measures", which first relaxed the care targets and models of telemedicine. At the same time, the psychologist's research and development of laws and regulations continues through the "Innovation and Regulations Sandbox Platform" of the Ministry of Economic Affairs. 
+👨‍⚕️ For example, the Psychologists Act stipulates that "a psychologist's practice must be limited to one place". However, there is no limit placed on the location of a patient. Regarding this, the Association of Consultant Psychologists and Clinical Psychologists, as well as relevant online platforms and communities, have actively participated in the discussions. They also noted important issues based on their own expertise to ensure that the legalization of remote consultation can happen concurrently with the safe, reliable and effective protection of participants' rights and interests.
 
- 👨‍⚕️ For example, the Psychologists Law stipulates that “the practice of a psychologist must be limited to one place”, but it does not limit the location of the case. In this regard, the consultative psychologists and clinical psychologists associations, as well as relevant online platforms and communities, also provide precautions according to their own professions, so that long-distance consultations can be safe, reliable, and effective in addition to complying with regulations. To protect the rights and interests of participants. 
+🇫🇷 From my personal experience, using remote consultation as a supplement to face-to-face meetings is indeed quite effective. Starting from 2012 to the beginning of 2017, I worked with a French psychoanalyst in a semi-proximate, semi-remote manner. Every six months, we would have a physical meeting. The rest of the time, we conversed via online video conference four days a week, 45 minutes each time.
 
- 🇫🇷 In my personal experience, distance as a supplement to the meeting really has quite good results. From 2012 until the beginning of 2017, I worked with French psychologists in a semi-proximal and semi-distant manner, and met physically every six months, and the rest of the time was via a web video conversation four days a week for 45 minutes each time. . 
+💺 The classical method of psychoanalysis involves one person lying on a couch and saying whatever is on their mind, while another person listens attentively. Although this method is different from psychological counseling, they have their similarities. From my perspective, the process of continuously sharing one's thoughts with a professional listener and being listened to attentively is tremendously healing. Most importantly, this feeling of co-presence can be achieved via a remote connection.
 
- 💺 The method of classical psychoanalysis is that one person lays on a bench, speaks what he thinks, and the other listens intently. Although this method is different from psychological counseling, it still has similarities. For me, being able to continue to share with professional listeners is a very healing process. The most important thing is how to achieve the "common presence" feeling through remote connection. 
-
- 💝 Through the vTaiwan platform and sandbox mechanism, all stakeholders “from conversation to dialogue” together to accomplish a very important thing for this era: no matter where they are, everyone can find a profession that they can talk to Counselors take their mental health seriously. 
+💝 In my opinion, the government's role in this policy is to listen carefully to the voices of all parties. It has used the vTaiwan platform and sandbox mechanism to help all stakeholders move from brainstorming to dialogue and proceed towards a collaborative creation. It has achieved a very important task for our generation — enabling every person, no matter where they are, to find a professional consultant to confide in and have their mental health taken seriously.
