--- a/_i18n/zh-TW/_posts/2020-01-09-心難過？線上諮商時代來臨.md
+++ b/_i18n/zh-TW/_posts/2020-01-09-心難過？線上諮商時代來臨.md
@@ -2,7 +2,8 @@
 layout: post
 title: 商周專欄：心難過？線上諮商時代來臨
 excerpt: 從今年開始，不用出門也可以諮商了。
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/7/7174287ad0e4063fdb6b84ac8882406c3c6805be.jpeg
+image: https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/f/f4f8761321a5d56c753496f71c4834c0df47001
+8_2_1380x774.jpeg
 author: 唐鳳、彭筱婷
 category: blog
 tags: [社會創新]
