--- a/_posts/2020-01-09-心難過？線上諮商時代來臨.md
+++ b/_posts/2020-01-09-心難過？線上諮商時代來臨.md
@@ -2,8 +2,7 @@
 layout: post
 title: 商周專欄：心難過？線上諮商時代來臨
 excerpt: 從今年開始，不用出門也可以諮商了。
-image: https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/f/f4f8761321a5d56c753496f71c4834c0df47001
-8_2_1380x774.jpeg
+image: https://talk.pdis.nat.gov.tw/uploads/default/optimized/2X/f/f4f8761321a5d56c753496f71c4834c0df470018_2_1380x774.jpeg
 author: 唐鳳、彭筱婷
 category: blog
 tags: [社會創新]
