--- a/_i18n/en/_posts/2019-12-30-討論神豬-從人的「同理」開始.md
+++ b/_i18n/en/_posts/2019-12-30-討論神豬-從人的「同理」開始.md
@@ -1,23 +1,22 @@
 ---
   layout: "post"
-  title: "Apple Column: Discussing the Pig of God"
-  excerpt: "\"How to discuss the possibilities of alternative rituals on the premise that the people are spontaneous?\""
+  title: "Discussing “holy pigs” begins with human empathy"
+  excerpt: ""How might we discuss alternative ritual proposals self-initiated by the people?""
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/30ce40edc16234835798620d819143cd2401d275.jpeg"
-  author: "唐鳳、黃子維"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "開放政府"
+    - "Open Government"
 ---
 
+🐷 In August this year, a netizen "Happy Oink" has put forward on the participation platform (Join.gov.tw) the proposal to "stop the holy pigs weight competition ritual" in the hope to reduce the likely sufferings of animals in the process. "Happy Oink" has also used international examples such as Germany, where "a circus has used 3D holographic images to replace real animals to create the world's most fantastic circus" and Spain, where "the bullfighting festival has used inflatable bulls instead of real bullfights to enable children to take part and understand the meaning of life" to encourage the adoption of more diverse, animal-friendly ways to replace traditional pig breeding and ritual sacrifices.
 
- 🐷 In August this year, netizen "Happy Mom" proposed on the Public Policy Network Participation Platform (Join.gov.tw) "Termination of the Sacred Pig Weight Contest", hoping to reduce the possible suffering of animals in the process. "Happy Mum" also said, "In Germany, the circus switched to 3D holographic images to replace real animals, creating the world's most fantastic circus." "In Spain, the bullfighting festival changed to inflatable bulls instead of real bullfights, so that children can Participate in it, and understand the meaning of life. ”I look forward to Taiwan ’s diversification of more friendly animals to replace traditional pig breeding and sacrifices. 
+🧩 Facing this proposal, the National Development Council, the responsible agency of the Join platform, began by inviting the relevant ministries to clarify the scope of powers and responsibilities and the work division. On the one hand, the Council of Agriculture Executive and Hakka Affairs Council are the primary organizing agencies, and the Ministry of Culture and the Ministry of the Interior are the subsidiary organizing agencies; on the other hand, it has been decided that this case should use a collaborative meeting method to collect the different opinions of various circles in order to achieve a mutual understanding.
+ 
+🙌 Before the collaborative meeting, the four ministries mentioned above also reached a basic position based on the government's long-term governance principles: when holy pigs are being used for ritual sacrifice and are a part of folk religious and cultural activities, governments at all levels should refrain from applying laws or punishments or adopting other methods of coercive intervention; instead, various counseling measures should be used to help pig breeders raise pigs in a more natural way. At the same time, more encouragement and incentives can be provided so that temples and groups handling the relevant activities have an opportunity to find benevolent ways to perform rituals that both respect religious piety and safeguard animal protection.
+ 
+🌱 Accordingly, the theme of the collaborative meeting has been set as follows: "How might we discuss alternative ritual proposals self-initiated by the people?"
+ 
+🙋 At this point, readers may want to ask the question: as the government has already decided against intervening, is there still a need to conduct a meeting? Actually, the focus of the "collaboration" is not the extent of the government's involvement in people's power; rather, the focus is that through the mechanism of informed discussion, every stakeholder, including the government, can actively take part in a rational discussion in a respectful and inclusive setting and hear each other's thoughts and difficulties, thereby promoting understanding between different members of society, minimizing confrontation and hostility, and maintaining a complete record.
 
- 🧩 In this case, the National Development Council, which is the competent authority of the Join platform, will first invite relevant ministries to clarify the scope of powers and responsibilities and the division of labor. On the one hand, the agricultural committee and the guest committee are the coordinating agencies, and the Ministry of Culture and the Ministry of the Interior are the co-organizing agencies; on the other hand, it is also decided that this case should integrate the different opinions of various circles to achieve mutual understanding through collaborative meetings. 
-
- 🙌 Based on the government's long-term governance principles, the above-mentioned four ministries also reached a basic position before the collaborative meeting: that is, when the god pig is used for sacrifice and is part of folk religion and cultural activities, governments at all levels It should not be compulsory to intervene by law or punishment. Instead, through various counselling measures, assist the pig breeder to raise the pig in a more natural way. At the same time, it can also provide more encouragement and incentives, so that temples and groups handling related activities have the opportunity to find out the sacrifice ways to maintain religious piety and take care of animal protection. 
-
- 🌱 The theme of the collaboration meeting is therefore set to: "How to discuss the possibilities of alternative rituals on the premise of the spontaneity of the people?" 
-
- 或许 At this point, readers may have questions: Since the government has decided not to Is there a need for a compulsory intervention? In fact, the focus of "collaboration" is not the degree of government's involvement in public power, but through the mechanism of informed discussion, all stakeholders, including the government, can actively participate in situations of rational dialogue and respect for tolerance. Listen to each other's thoughts and difficulties, thereby promoting understanding between different members of society, reducing confrontation and hostility, and keeping a complete record. 
-
- 🌈 In conclusion, the six recommendations produced by this collaborative meeting (for details, please see: [pdis.tw/58](https://pdis.tw/58)), may not yet have any party Completely satisfied. However, such an opportunity for dialogue can indeed allow the sponsors, animal protection groups, temple representatives, and pig breeders who originally had divergent positions to take a small step forward in the same direction. 
+🌈 To sum up, the [six recommendations](https://PDIS.tw/58) produced by this collaborative meeting may not have fully satisfied any one party. However, such an opportunity for dialogue can indeed enable proponents, animal protection groups, temple representatives and pig breeders with initially divergent positions to move one small step forward in the same direction.
