--- a/_i18n/en/_posts/2020-01-13-討論神豬-從人的「同理」開始.md
+++ b/_i18n/en/_posts/2020-01-13-討論神豬-從人的「同理」開始.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Discussing “holy pigs” begins with human empathy"
-  excerpt: ""How might we discuss alternative ritual proposals self-initiated by the people?""
+  excerpt: "“How might we discuss alternative ritual proposals self-initiated by the people?”"
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/30ce40edc16234835798620d819143cd2401d275.jpeg"
   author: "Audrey Tang, Zach Huang"
   category: "blog"
