--- a/_i18n/en/_posts/2019-03-12-從零開始-臺灣的民主創新.md
+++ b/_i18n/en/_posts/2019-03-12-從零開始-臺灣的民主創新.md
@@ -1,7 +1,7 @@
 ---
   layout: "post"
   title: "Starting from Zero: Taiwan's democratic innovation"
-  excerpt: "Audrey Tang, Digital Minister of Taiwan, believes that the most important thing is the spirit of public dialogue and collaboration."
+  excerpt: "Public dialogue and collaboration are vital, says Audrey Tang, the Digital Minister of Taiwan."
   image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/c/c2061a5cd697744724d0462de0dd744ce66aea4f.jpeg"
   author: "Audrey Tang, Sheau-Tyng Peng"
   category: "blog"
@@ -9,44 +9,44 @@
     - "Open Government"
 ---
 
-📹 In 2012, the Executive Yuan launched the “Economic Power-Up Plan” advertisement, which was based on the phrase “Everything is accelerating”. Four citizen hackers were dissatisfied with the government’s rash response and decided to respond with positive actions. 
+📹 In 2012 A controversial government advertisement in Taiwan proposed a peculiar idea: “Instead of wasting time deliberating policies, let’s focus on doing the groundwork and get things done!” In response, four programmers with a civic-minded ethos did something else entirely.
 
-🗺 They made the “Central Government Budget Visualization” project to make the data easy to understand, and the public can also rate and comment on each budget. This project is one of the most active citizen technology communities in the world today, and the prototype of the g0v government. 
+🗺 These “civic hackers”—that is, politically minded computer programmers with an activist ethos—built a citizen auditing system for Taiwan’s central government budget. They made data from the Accounting and Statistics Office accessible, easy to understand and interactive. The public could rate and comment on every item in the budget. This became the foundation of the g0v (“gov-zero”) movement, which is now one of the world’s most active civic-tech communities.
 
-🤝 Since then, Taiwan has taken the core concept of "taking technology to the realm of people's lives, rather than requiring people to enter the space of technology", incorporating the spirit of collaboration into government governance. I therefore decided to accept the government's invitation to serve as an executive public official, promote administrative innovation, and create digital cooperation possibilities between citizens and the government. 
+🤝 Since then, Taiwan has put online collaboration at the core of its governance. The idea is to bring technology into the spaces where citizens live, rather than expect citizens to enter the space of technology.
 
-🌻 We believe that the government must first trust the people to have the power to set agenda, and the people can make democracy work.
+🌻 The premise is this: the government must first trust the people with agenda-setting power; then the people can make democracy work.
 
-📶 The existence of democracy and freedom in Taiwan is not taken for granted. In 1987, the Government of the Republic of China lifted the martial law for nearly 40 years. The first presidential direct election was held in 1996. At this time, Taiwan has a fairly solid civil society. People are used to joining the community and NGOs to join hands with community partners. It is also this year that the Internet has begun to rise around the world, and Taiwan is no exception. 
+📶 Taiwan did not always enjoy these freedoms, digital or otherwise. In 1987 martial law was lifted after nearly 40 years. The first direct presidential election took place in 1996, just as the internet was taking off. By then, Taiwan had a fairly robust civil society, built on an historic practice of community associations that used “collaborative action” to find common solutions.
 
-🚅 Taiwan's main island is 394 kilometers long and takes about one and a half hours from Taipei to Kaohsiung. This kind of geographical environment gives us great advantages in the development of the network. "Broadband human rights" is the core policy of the current government. The Internet access rate of people over the age of 12 is 87%. For the 23 million people in Taiwan, using the Internet as a public discussion space is more natural than voting. 
+🚅 The island of Taiwan is 394km long, a journey of less than two hours by high-speed rail. This has proved a major advantage in deploying internet connectivity. The idea of broadband as a human right is at the core of the government’s policy. Some 87% of people over the age of 12 are connected. For a population of 23m, the internet is even more natural as a public space for discussion than the practice of voting.
 
-🚸 "The generation of customary authority" and the "generation of habitual freedom" coexist in the Taiwan society, and there are still conflicts and running-in. And we find "practical collaborative participation" as a common link in democracy in the digital age. 
+🚸 Today, generations accustomed to authoritarian power and generations accustomed to freedom coexist, and occasionally clash. Yet a common thread running through our digital democracy projects is collaborative participation.
 
-🗺 Since the g0v project is openly licensed and encouraged to change, the Executive Council's "Join" online participation platform and the Taipei City Government have successively adopted the budget visualization system as the basis for the “participatory budget”, making it easy for the public to understand budget allocation and engage in discussion. 
+🗺 Taiwan’s national platform for online participation, called “Join”, and the Taipei City government have adopted the g0v system for projects to include the public in budget matters. Data visualisation tools help people to understand what is allocated where.
 
-🙋 The Join platform, which attracts more than 4 million people, the function is certainly not limited to watching the budget. Join's "ideas" area is open to public proposals, as long as there are 5,000 people signing the e-petition, the relevant responsible department will have to respond. 
+🙋 The “Join” platform, with over 4m participants, extends beyond budget matters. Anyone can begin an e-petition on the platform. Once a case has 5,000 signatures, the relevant ministries must respond in public.
 
-🔗 In addition, we have set up an “Participation Officer” team in each ministry as a single window for inter-departmental cooperation and a bridge between the public sector and the citizens. For example, whenever there is a proposal on the Join platform, we will hold a collaborative meeting, inviting the people and relevant government departments to join the discussion, in order to unite the consensus of all parties, and then innovate the policy. 
+🔗 As Digital Minister, I have established a network of Participation Officers in each ministry. They serve as the links between the general public and the public sectors, and as channels for inter-agency collaboration. Whenever a proposal is raised, a collaborative meeting can be held, with participants from government departments and the public invited to join the discussion and to jointly create new policies.
 
-🍲 Currently, we have had more than 40 collaborative meetings, whether it is improving online tax filing software, local medical resources, or exploring the fisheries and ecological balance of marine national parks, inviting stakeholders to collaborate and find a solution. 
+🍲 So far we have held more than 40 collaborative meetings. We gathered stakeholders to find solutions, be it to improve the experience of filing income tax, the allocation of medical resources in remote towns, or balancing the fishery and marine biodiversity in national parks.
 
-🔄 We have found that the public sector needs to adopt social innovation, and it needs to form an ecosystem for the government, the community, and the enterprise, and has a clear mechanism to regulate its maintanence and accountability.
+🔄 The adoption of civic innovations in the public sector requires an established system for regulation, maintenance and accountability. Thus, it is imperative that the government, the tech community and companies come together to form a collaborative ecosystem to amplify the impact of civic technology: code can support democratic values in a way that wasn’t previously possible.
 
-🏖 At the same time, only by letting the legal system keep pace with the times and backed by regulations can we promote social innovation and drive regulatory innovation. Therefore, the Executive Yuan launched the “Innovation Laws and Regulations Sandbox Platform” in 2017, allowing people who are engaged in innovation to experiment freely within a certain period of time without being bound by regulations. 
+🏖 It is only through integrating with the existing legal system, with the backing of laws and regulations, that social innovation can drive regulatory innovation. For example, we launched a Regulatory Sandbox platform in 2017, allowing entrepreneurs to experiment freely without legal constraints for a certain period of time. It is meant to spur fintech experiments and autonomous vehicles, among other innovations.
 
-💡 The vTaiwan platform, initiated by the g0v community, is another important driver of the establishment mechanism. Prior to the government's proposed Diversified Taxi Service Program in 2016, Uber's legitimacy was discussed enthusiastically through an online collaboration mechanism. In 2018, vTaiwan succeeded in facilitating the adjustment of platform economic regulations and the legalization of financial supervision sandboxes and unmanned sandboxes. 
+💡 Another important driver for public participation in law-making is the vTaiwan platform, which was initiated by the g0v community. (Where the Join platform is run and maintained by the government, vTaiwan is run by citizens and maintained by g0v.) The legal status of Uber was heatedly discussed on vTaiwan, supported by a system using artificial intelligence to manage the conversation. This helped the different sides converge towards a “Diversified Taxi Services Plan” in 2016. In 2018 vTaiwan also successfully helped enact regulations for the platform economy.
 
-🏡 We also apply the spirit of the "ecosystem" to the development of Taiwan. This year's "Regional Revitalization National Strategic Plan" is a combination of local production, government, learning, research, and society. It calls on residents to take concrete actions to participate in and unite their own visions of the local community as an ecosystem. 
+🏡 We also apply the this “ecosystem” spirit to the development of Taiwan. This year’s “Regional Revitalization National Strategic Plan” is a combination of local production, government, learning, research, and society. It calls on residents to take concrete actions to participate in and unite their own visions of the local community as an ecosystem.
 
-💞 These practices not only lower the threshold of democracy, but also the process of mutual understanding between the people and the government. When people see that collaboration can bring results, they can stimulate their willingness to participate and give substantial feedback, and even further use and change to contribute to the citizen technology community. 
+💞 In addition to lowering the barriers to democracy, this approach is also a process of mutual understanding. When the public sees the results of collaboration, it leads to more participation. Only through this cycle will it be possible for citizens to provide concrete feedback and go even further by applying, adjusting and contributing to the civic tech community.
 
-🌏  One of the goals of the Executive Yuan's Public Digital Innovation Space (PDIS) is to bring such experimental results to friends around the world. Therefore, we continue to visit cities such as New York, Toronto, Madrid, Tokyo, and Hong Kong, and co-organize workshops with the civic tech community to share the democratic and innovative mechanisms of the PO system and collaborative meetings with friends around the world. The plan for g0v has also been transplanted abroad, such as “budget.g0v.it” in Italy, established in 2018. 
+🌏 Our goals for PDIS, the policy lab in Taiwan’s cabinet, is to bring these experimental results to people all over the world. We have visited New York, Toronto, Madrid, Tokyo and Hong Kong to co-organise workshops with civic tech communities for sharing democratic innovations, such as our Participation Officers network and collaborative meetings. The g0v programme has been transplanted internationally, with “g0v Italy” set up in 2018.
 
-🚰 Today's international cooperation is no longer just an agreement between the government and the government, but also a synergy between the people and the people. For example, in the "Presidential Hackathon" held for the first time last year, the "Water Saviors" team composed by Taiwan Water Company and folk friends used the "deep learning" algorithm to introduce the experience of the missing masters into the machine. Successfully made a water pipe inspection system with an accuracy rate of 70%. The team was therefore invited by the New Zealand government to participate in the local acceleration plan to provide the New Zealand people with solutions to the water shortage problem. 
+🚰 International co-operation is no longer just about agreements between governments: it is also about people building shared values. For example, at our Presidential Hackathon last year, the cross-sectoral team “Water Saviours” deployed machine learning to assist pipe repair with an accuracy rate of 70%. The team was then invited by the New Zealand government to co-create solutions to address water leakage.
 
-🚀 Many people often ask me: What will democracy look like in the future? I believe that the future of democracy will be based on the "culture of listening." Taiwan has a highly developed online environment with no historical burdens, so it is possible to experiment with a new model of democracy. 
+🚀 People often ask me about the future of democracy. To me, democracy’s future is based on a *culture of listening* . Taiwan has no “legacy systems” of representative democracy (to use the language of technology) and the internet is highly developed. This means we can experiment with new modes of democracy.
 
-🎨 As President Tsai Ing-wen said when she took office three years ago: “Before, democracy was a showdown between two opposing values. Now, democracy is a conversation between many diverse values.”
+🎨 As President Tsai Ing-wen said at her inauguration three years ago: “Before, democracy was a showdown between two opposing values. Now, democracy is a conversation between many diverse values.”
 
-🗽 At a time when the world is rethinking basic elements of governance, Taiwan's democracy, in which the people actively participate and the government responds in the here and now, is demonstrating the synergy and dialogue of the new citizenship in the 21st century. 
+🗽 At a time when the world is rethinking basic elements of governance, Taiwan’s digital democracy—in which the people take the initiative, and the government responds in the here and now—can serve as a demonstration of new forms of citizen and state co-operation and dialogue for the 21st century.
