--- a/_i18n/en/_posts/2020-02-03-全民許願-共同實現.md
+++ b/_i18n/en/_posts/2020-02-03-全民許願-共同實現.md
@@ -1,21 +1,20 @@
 ---
   layout: "post"
-  title: "Apple Column: All People Make Wishes Together"
-  excerpt: "Any suggestion in the \"Citizen's Wishing Pool\", as long as it is selected by the judging panel as the main axis, is likely to become a problem for the participating teams to try to solve the problem."
-  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/30ce40edc16234835798620d819143cd2401d275.jpeg"
-  author: "唐鳳、黃子維"
+  title: "When We Wish Together We Accomplish Together"
+  excerpt: "Any suggestion in the “Civic Wishing Pool”, as long as it is selected by the judging panel as the main goal, is likely to become an issue for the participating teams to try to solve for the bonus points."
+  image: "https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/29805f2cc27cdd3a5f1f3c9b927233158f285cdc.png"
+  author: "Audrey Tang, Zach Huang"
   category: "blog"
   tags: 
-    - "社會創新"
+    - "Social Innovation"
 ---
 
+🏆 The annual Presidential Hackathon is entering its third year. Unlike last year, this year we have also set up a "Civic Wishing Pool". That way, everyone who has innovative ideas for solving social, economic, and environmental problems, can make specific recommendations by going to the Presidential Hackathon webisite before February 19th ([ph.taiwan.gov.tw](https://presidential-hackathon.taiwan.gov.tw/)), click on the "2020 Civic Wishing Pool", and refer to the examples prepared by the organizer in the 17 categories of sustainable development goals.
 
- 🏆 The annual President's Cup hackathon is entering its third year. This year, compared with last year, we also set up a "Citizen's Wishing Pool", so that every friend who has innovative ideas and hopes to solve social, economic and environmental problems, as long as February 19th, hacked the website ([ph.taiwan .gov.tw](https://presidential-hackathon.taiwan.gov.tw/)) Click on the "2020 Citizen Wishing Pool", you can refer to the examples prepared by the organizer in the 17 categories of sustainable development goals. , Make specific recommendations. 
+⛲ Of course, this year's Presidential Hackathon also includes new considerations. In order to increase the significance of the "Civic Wishing Pool" in the overall event, recommendations from the pool will be selected by the judging panel, and provided to the participating teams as proposals. Upon entering the selection stage - when the judging panel begins to score hundreds of teams and decide on the promotion or elimination according to their scores - any team that meets the core goal of the "Civic Wishing Pool" will receive an additional 10% bonus points.
 
- ⛲ Of course, this year's President's Cup hackathon also made a different attempt. In order to increase the importance of the "Citizen's Wishing Pool" in the overall activity, in addition to setting the recommendations selected by the judging panel as the main goal and providing the participating team's proposals for reference, the jury entered the selection stage, which means that the judging panel has targeted hundreds of When each team starts to give points, decide on promotion or elimination according to the order, any team that meets the core objective of the "Citizen's Wishing Pool Principal" will receive an additional 10% bonus. 
+🎯 The experience of the past two years has shown that the deciding factor for whether a team can pass the two-stage selection test and obtain the qualifications of the top 20 and top 10 is often just one or two points, or even between tenths and percentiles. This extra 10% bonus points will be a key factor influencing this year's team ranking. In other words, any suggestion in the "Civic Wishing Pool", as long as it is selected by the judging panel as the main goal, is likely to become an issue for the participating teams to try to solve for the bonus points.
 
- 🎯 The experience of the past two years has shown that the team can pass the two-stage selection test and obtain the top 20 and top 10 qualifications. The gap is often one or two points, or even tenths or hundredths. Between digits. This extra 10% bonus will be a key factor influencing this year's team rankings. In other words, any suggestion in the "Citizen's Wishing Pool", as long as it is selected by the judging panel as the main axis, is likely to become a problem for the participating teams to try to solve the problem. 
+🗳️ In addition, this year's Presidential Hackathon also continues to use the "Quadratic Voting" method. Every citizen who is successfully certified on the National Development Council's "Public Policy Participation Network Platform (Join)" will automatically receive 99 points. Between April 24 and 30, he can allocate the points to his favorite teams, further increasing their chances of advancement. As for what "Quadratic Voting" is: in simple terms, if you want to vote for a team, you only need 1 point, but you need 4 points for two votes, 9 points for three votes, and so on.
 
- 🗳️ In addition, this year's Presidents Cup hackathon also continued to use the "square voting method". Every citizen who has been successfully certified on the National Development Association's "Public Policy Network Participation Platform (Join)" will automatically receive 99 points. Between April 24 and 30, he can allocate the points in his hand to Favorite teams, in another way, increase their chances of promotion. As for what is the "square voting method"? In simple terms, if you want to vote for a team, you only need 1 point, but you need 4 points for two votes, 9 points for three votes, and so on. 
-
- 🚸 Based on the above, we hope that through the improvement and continuation of the "Citizen's Wishing Pool" and the "Square Voting Law", we will increase the public's awareness and participation in the President's Cup hackathon. After all, only the wisdom of everyone can do a good job. When all the people come to make a wish, it is possible to achieve it together. 
+🚸 Based on the above, I hope that through the improvement and continuation of the "Civic Wishing Pool" and the "Quadratic Voting", the public will be more aware of and participate in the Presidential Hackathon. After all, only by gathering the wisdom of all people can we do things well. When people come together to make a wish, it is possible to achieve it together.
