--- a/_i18n/zh-TW/_posts/2020-02-03-全民許願-共同實現.md
+++ b/_i18n/zh-TW/_posts/2020-02-03-全民許願-共同實現.md
@@ -2,7 +2,7 @@
 layout: post
 title: 蘋果專欄：全民許願 共同實現
 excerpt: 任何在「公民許願池」中的建議，只要被評審團選為主軸，極可能成為參賽隊伍為求加分，而努力破解的問題。
-image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/3/30ce40edc16234835798620d819143cd2401d275.jpeg
+image: https://talk.pdis.nat.gov.tw/uploads/default/original/2X/2/29805f2cc27cdd3a5f1f3c9b927233158f285cdc.png
 author: 唐鳳、黃子維
 category: blog
 tags:
