--- a/_i18n/zh-TW/_posts/2019-12-16-我的「法官」初體驗.md
+++ b/_i18n/zh-TW/_posts/2019-12-16-我的「法官」初體驗.md
@@ -22,3 +22,5 @@ tags:
 💁 在這套系統的基礎上，今年司法院資訊處的同仁，與民間的資訊專家共同組隊，參加今年的「總統盃黑客松」競賽，產出的新版系統，透過人工智慧可以直接閱讀裁判書，不用再輸入個別參數，就可以得出量刑建議，這個提案也獲選為今年的卓越團隊之一。
 
 🗺️ 量刑資訊系統，與士林地院「逗陣繞法院」活動，目標都是要打造人民願意親近的司法。這與「開放政府」的理念一致，也就是運用透明、參與，來建立彼此的互信。而在服務設計的過程裡，又要如何兼顧公正、品質與效率？答案就在「[政府數位服務指引](https://www.ndc.gov.tw/Content_List.aspx?n=E7F6C261A5F5D9F5)」當中。
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9mE5IdjdSPQ" frameborder="0" allowfullscreen></iframe>
