* add link to video

--- a/_i18n/en/_posts/2019-05-31-故宮的變與不變.md
+++ b/_i18n/en/_posts/2019-05-31-故宮的變與不變.md
@@ -18,3 +18,5 @@
 🔮 Furthermore, the National Palace Museum has demonstrated ingenuity in its innovative use of new media. In February last year, I "inhabited" a free-moving robot that was equipped with a 360-degree panoramic lens. In my first visit to the Southern Court of the National Palace Museum, President Lin Cheng-i and hundreds of people were online at the same time, along with viewers who watched the video afterwards. Together, we viewed the "The Pinnacle of Japanese Art: Exhibit from the Collection of Tokyo/Kyushu National Museum" which was extremely rare to see in Taiwan. For me, this viewing experience that transcended temporal and spatial constraints definitely represented a new path to enable the National Palace Museum to improve publicity and establish new paradigms.
 
 🌈 The essence of the National Palace Museum lies in its steadfast preservation of its precious collection that captures fleeting beauties in moments of history; at the same time, how the Museum should adapt to the times so that more viewers can use multiple ways to gain access and understand the National Palace Museum represents not only an opportunity for us to grasp but also a responsibility for us to achieve change.
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rkeo6SEVInI" frameborder="0" allowfullscreen></iframe>
