--- a/_i18n/zh-TW/_posts/2019-05-31-故宮的變與不變.md
+++ b/_i18n/zh-TW/_posts/2019-05-31-故宮的變與不變.md
@@ -17,3 +17,5 @@ tags: [開放政府]
 🔮 此外，故宮對於新媒體的創新應用，也是別出心裁。前年二月，我「附身」在一個能夠自由移動，而且配備 360 度全景鏡頭的機器人身上，初次參訪故宮南院，與林正儀院長以及數百位同時在線，或是事後觀看錄影的民眾，一同欣賞了在台灣難得一見的「日本美術之最—東京・九州國立博物館精品展」。對我來說，這樣跳脫時間與空間限制的參觀經驗，絕對足以成為故宮提高公共性、樹立新典範的嶄新途徑。
 
 🌈 故宮的精華，在於典藏中的恆久不變，抓住了歷史上轉瞬即逝的美；在此同時，如何順應潮流，讓更多觀眾能夠透過多元的方式親近、了解故宮，這不僅是一個應該把握的機會，也是實現改變的責任。
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/rkeo6SEVInI" frameborder="0" allowfullscreen></iframe>
